syntax = "proto3";

package fastcopy;

option csharp_namespace = "FastCopy";

service TransferService {
  // Bidirectional streaming RPC
  // Client streams FileChunk messages.
  // Server streams TransferStatus messages back.
  rpc StreamFiles (stream FileChunk) returns (stream TransferStatus);
}

message FileChunk {
  bytes content = 1;
  int64 offset = 2;
  string hash = 3;
  bool is_compressed = 4;
  string file_path = 5;
}

message TransferStatus {
  int64 bytes_received = 1;
}
